BUD-514 Add dashboard period and currency filters
